--- a/컴구운체/_컴퓨터 구조_ 04. CPU 작동 원리.md
+++ b/컴구운체/_컴퓨터 구조_ 04. CPU 작동 원리.md
@@ -1,7 +1,16 @@
+---
+tistoryBlogName: coding-woogi
+tistoryTitle: _컴퓨터 구조_ 04. CPU 작동 원리
+tistoryVisibility: "0"
+tistoryCategory: "1408365"
+tistorySkipModal: true
+tistoryPostId: "14"
+tistoryPostUrl: https://coding-woogi.tistory.com/14
+---
 ### 04-1 ALU와 제어 장치
 - ALU : 계산 장치
 - 제어장치 : 제어신호를 받아들이고 명령어를 해석하는 장치
-```
+```CSS
 - ALU가 받아들이는 정보
 	레지스터를 통해 피연산자를 받아들임
 	제어장치로부터 수행할 연산을 알려주는 제어신호를 받아들임
@@ -33,7 +42,7 @@
 ---
 ### 04-2 레지스터
 - 레지스터 : 임시 저장 장치, 명령어 & 데이터를 실행 전/후로 저장
-```
+```CSS
 - 주요 레지스터 종류
 1. 프로그램 카운터
 	메모리에서 가져올 명령어의 주소(메모리에서 읽어들일 명령어주소)
@@ -58,7 +67,7 @@
 ### 04-3 명령어 사이클과 인터럽트
 - 명령어 사이클 : 하나의 명령어를 처리하는 정형화된 흐름
 - 인터럽트 : 위 사이클이 끊어지는 상황
-```
+```CSS
 - 명령어 사이클
 	명령어가 일정한 주기로 반복되며 실행되는 것
 
