--- a/컴구운체/_컴퓨터 구조_ 05. CPU 성능 향상 기법.md
+++ b/컴구운체/_컴퓨터 구조_ 05. CPU 성능 향상 기법.md
@@ -1,6 +1,6 @@
 ---
 tistoryBlogName: coding-woogi
-tistoryTitle: _컴퓨터 구조_ CPU 성능 향상 기법
+tistoryTitle: _컴퓨터 구조_  05.CPU 성능 향상 기법
 tistoryVisibility: "0"
 tistoryCategory: "1408365"
 tistorySkipModal: true
