--- a/컴구운체/_운영체제_/_운영체제_ 10. 프로세스와 스레드.md
+++ b/컴구운체/_운영체제_/_운영체제_ 10. 프로세스와 스레드.md
@@ -1,3 +1,12 @@
+---
+tistoryBlogName: coding-woogi
+tistoryTitle: _운영체제_ 10. 프로세스와 스레드
+tistoryVisibility: "3"
+tistoryCategory: "1408365"
+tistorySkipModal: true
+tistoryPostId: "38"
+tistoryPostUrl: https://coding-woogi.tistory.com/38
+---
 
 ### 10-1. 프로세스 개요
 프로세스는 ==실행중인 프로그램==을 의미
@@ -66,6 +75,23 @@
  2. 자식 프로세스의 exec
  fork : 스스로의 복사본을 생성하는 시스템 호출(복제)
  exec : 자신의 메모리 공간을 새로운 프로그램으로 덮어쓰는 시스템 호출(옷 갈아입기)
+```
 
+### 10-3. 스레드
+스레드는 ==실행의 단위==, 하나의 프로세스는 여러개의 스레드 보유 가능
+```MarkDown
+- 프로세스와 스레드
+ 기존의 프로세스는 한번에 하나의 일을 처리 -> 단일 스레드 프로세스
+ 스레드의 개념 도입 후에 여러 일을 한번에 처리 가능 -> 멀티 스레드 프로세스
 
+ 스레드 : 프로세스를 구성하는 실행흐름의 단위
+ 실행에 필요한 최소한의 정보를 유지하며 프로세스 자원 공유 및 실행
+
+- 멀티 프로세스와 멀티 스레드
+ 멀티 프로세스 : 여러 프로세스를 동시 실행하는 것
+ 멀티 스레드 : 여러 스레드로 프로세스를 동시 실행하는 것
+
+ -> 단일 스레드 프로세스를 여러개 실행과 여러 스레드로 프로세스 하나를 실행의 차이
+  프로세스끼리는 자원 공유X, 스레드끼리는 자원 공유O -> 프로세스 여러개 실행은 "낭비"
+  하지만 자원 공유는 곧 하나의 스레드에 문제 발생 시 다른 스레드에 영향을 미치는 "단점"
 ```
